...
            "state": "translated",
            "value": "Bắt đầu"
          }
        }
      }
    },
    "Log set": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Log set"
...
            "state": "translated",
            "value": "Bỏ qua nghỉ"
          }
        }
      }
    },
    "Today's session": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Today's session"
...
